src/test/ui/parser/removed-syntax-with-1.stderr
error: expected one of `,`, `.`, `?`, `}`, or an operator, found `with`
  --> $DIR/removed-syntax-with-1.rs:10:25
   |
LL |     let b = S { foo: () with a };
   |                         ^^^^ expected one of `,`, `.`, `?`, `}`, or an operator here

error: aborting due to previous error

